<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/new_image"
        android:id="@+id/includedLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/galleryList" />


    <ListView
        android:id="@+id/galleryList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/includedLayout" />

    <Button
        android:id="@+id/sortDescendingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sort"
        app:layout_constraintBottom_toBottomOf="@+id/galleryList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


</androidx.constraintlayout.widget.ConstraintLayout>
